--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         }
         
         .logo-image {
-            height: 40px; /* Adjust based on your logo's aspect ratio */
+            height: 44px; /* Increased by 10% from 40px */
             width: auto;
         }
         
@@ -253,7 +253,7 @@
             </div>
             <p>Discover your ideal role in the world of innovation and leadership. Uncover whether you're an Innovator, Coach, or Leader. Take the quiz now and unlock your potential.</p>
             <div class="btn-group">
-                <a href="quiz.html" class="btn btn-primary">Start Quiz</a>
+                <a href="quiz1.html" class="btn btn-primary">Start Quiz</a>
             </div>
         </div>
     </section>
