--- a/quiz7.html
+++ b/quiz7.html
@@ -327,7 +327,7 @@
             const phoneError = document.getElementById('phoneError');
             const companyError = document.getElementById('companyError');
             
-            // Update progress bar
+            // Update progress bar (6/6 steps - final step)
             progressBar.style.width = '100%';
             
             // Email validation
