--- a/quiz4.html
+++ b/quiz4.html
@@ -282,7 +282,7 @@
             </div>
             
             <div class="btn-container">
-                <a href="quiz3.html" class="btn btn-outline" style="margin-right: auto;">Previous Question</a>
+                <a href="quiz3.html" class="btn btn-outline" style="margin-right: auto; background-color: transparent; border: 1px solid #E0E0E0; color: #222222; transition: all 0.2s ease;" onmouseover="this.style.backgroundColor='rgba(0, 0, 0, 0.02)'; this.style.borderColor='#81EDFF'" onmouseout="this.style.backgroundColor='transparent'; this.style.borderColor='#E0E0E0'">Previous Question</a>
                 <button id="nextBtn" class="btn" disabled>See Results</button>
             </div>
         </div>
@@ -295,8 +295,8 @@
             const progressBar = document.getElementById('progressBar');
             let selectedOption = null;
 
-            // Update progress bar
-            progressBar.style.width = '100%';
+            // Update progress bar (4/6 steps)
+            progressBar.style.width = '66.67%';
 
             // Get all radio buttons
             const radioButtons = document.querySelectorAll('input[type="radio"]');
