--- a/quiz4.html
+++ b/quiz4.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz - Gender</title>
+    <title>Leadapreneur - Quiz</title>
+    <link rel="icon" type="image/png" href="images/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -282,11 +283,12 @@
             </div>
             
             <div class="btn-container">
-                <a href="quiz3.html" class="btn btn-outline" style="margin-right: auto; background-color: transparent; border: 1px solid #E0E0E0; color: #222222; transition: all 0.2s ease;" onmouseover="this.style.backgroundColor='rgba(0, 0, 0, 0.02)'; this.style.borderColor='#81EDFF'" onmouseout="this.style.backgroundColor='transparent'; this.style.borderColor='#E0E0E0'">Previous Question</a>
-                <button id="nextBtn" class="btn" disabled>See Results</button>
+                <a href="quiz3.html" class="btn btn-outline" style="margin-right: auto; background-color: transparent; border: 1px solid #E0E0E0; color: #222222; transition: all 0.2s ease;" onmouseover="this.style.backgroundColor='rgba(0, 0, 0, 0.02)'; this.style.borderColor='#81EDFF'" onmouseout="this.style.backgroundColor='transparent'; this.style.borderColor='#E0E0E0'">Previous</a>
+                <button id="nextBtn" class="btn" disabled>Next</button>
             </div>
         </div>
     </div>
+    <div class="page-indicator" style="text-align: center; margin: 1.5rem auto; color: #666666; font-size: 0.9rem; max-width: 600px; padding: 0 20px;">4 of 6</div>
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
