--- a/quiz7.html
+++ b/quiz7.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Information - Quiz</title>
+    <title>Leadapreneur - Quiz</title>
+    <link rel="icon" type="image/png" href="images/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -305,6 +306,9 @@
             </form>
         </div>
     </div>
+    
+    <!-- Page Indicator -->
+    <div class="page-indicator" style="text-align: center; margin: 1.5rem auto; color: #666666; font-size: 0.9rem; max-width: 600px; padding: 0 20px;">6 of 6</div>
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
