--- a/index.html
+++ b/index.html
@@ -75,7 +75,12 @@
         /* Logo */
         .logo-container {
             text-align: center;
-            padding: 2.5rem 0 0; /* 40px top padding */
+            padding: 2.5rem 0 1rem; /* 40px top padding, 1rem bottom padding */
+        }
+        
+        .logo-image {
+            height: 50px; /* Increased by 25% from 40px */
+            width: auto;
         }
         
         .logo {
