--- a/quiz4.html
+++ b/quiz4.html
@@ -338,8 +338,13 @@
             // Next button click handler
             nextBtn.addEventListener('click', function() {
                 if (selectedOption) {
-                    // Save the answer for dashboard tracking
-                    localStorage.setItem('q4Answer', selectedOption);
+                    // Get the text of the selected answer
+                    const selectedRadio = document.querySelector('input[name="gender"]:checked');
+                    const answerText = selectedRadio ? selectedRadio.parentElement.querySelector('.option-text').textContent : selectedOption;
+                    
+                    // Save the answer text for dashboard tracking
+                    localStorage.setItem('q4Answer', answerText);
+                    console.log('Q4 Answer saved:', answerText);
                     // Navigate based on gender selection
                     if (selectedOption === 'male') {
                         window.location.href = 'quiz5.html';
